@@ -286,15 +286,15 @@ class IndicatorFactSheet(ATFolder, ModalFieldEditableAware,
         """ Return title with codes.  """
         codes = self.getCodes()
 
-        res = ''
+        res = u''
         for code in codes:
             if code:
-                res = res + "%s %s/" % (code['set'], code['code'])
+                res = res + u"%s %s/" % (code['set'], code['code'])
         if res:
-            res = self.title + ' (' + res[:-1] + ')'
+            res = self.title + u' (' + res[:-1] + u')'
         else:
             res = self.title
-        return res
+        return res.encode('utf-8')
 
     security.declarePublic('get_codes')
     def get_codes(self):
