@@ -3,6 +3,7 @@ Changelog
 
 4.0-dev - (unreleased)
 ----------------------
+ * Bug fix: return strings instead of unicode in Titles of IMS content [tiberich #4660]
  * Feature: disable all agg edit buttons until the title is filled in for Specification [tiberich #4629]
  * Bug fix: renamed parameter to avoid triggering error when adding assessment from dropdown menu [tiberich #4629]
  * Bug fix: fix broken related policy docs widget [tiberich #4627]
